welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:26: error: not found: value faireC
			faireC(Color.RED)
                        ^PatternPicture:27: error: not found: value faireC
			faireC(Color.BLUE)
                        ^PatternPicture:28: error: not found: value faireC
			faireC(Color.RED)
                        ^PatternPicture:29: error: not found: value faireC
			faireC(Color.BLUE)
                        ^