welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireC1(c:Color){
	setCouleurBrosse(c)
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	avance()
	avance()
	avance()
	
}

override def run() {
	for(c1 <- 1 to 2) {
		for(c2 <- 1 to 2) {
			faireC(Color.RED)
			faireC(Color.BLUE)
			faireC(Color.RED)
			faireC(Color.BLUE)
			for(c2 <- 1 to 5) {
				avance()
			}
		}
		gauche()
		for(c3 <- 1 to 5) {
			avance()
		}
		droite()
	}
	
}